--- a/index.html
+++ b/index.html
@@ -95,22 +95,9 @@
                       <div class="about-info">
                         <p><span class="title-s">Name : </span> <span>Muhammad Dzaky Taqillah</span></p>
                         <p><span class="title-s">Status : </span> <span>College Student</span></p>
-                        <p><span class="title-s">Email 1 : </span> <span>dzakytaqillah@gmail.com</span></p>
-                        <p><span class="title-s">Email 2 : </span> <span>dzakytaqillah@telkomuniversity.ac.id</span></p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="skill-mf">
-                    <p class="title-s">Skill</p>
-                    <div style="display: flex; flex-wrap: wrap;">
-                      <div style="width: 50%; padding: 10px; display: flex; align-items: center;">
-                          <img src="assets/img/logo-cpp.png" alt="C++ Logo" style="max-width: 50px; margin-right: 10px;"> <span>C++</span> <span style="flex: 1;"></span> <span class="pull-right">(still learning)</span>
-                      </div>
-                      <div style="width: 50%; padding: 10px; display: flex; align-items: center;">
-                          <img src="assets/img/logo-html.png" alt="HTML Logo" style="max-width: 50px; margin-right: 10px;"> <span>HTML</span> <span style="flex: 1;"></span> <span class="pull-right">(still learning)</span>
-                      </div>
-                      <div style="width: 50%; padding: 10px; display: flex; align-items: center;">
-                          <img src="assets/img/logo-css.png" alt="CSS Logo" style="max-width: 50px; margin-right: 10px;"> <span>CSS</span> <span style="flex: 1;"></span> <span class="pull-right">(still learning)</span>
+                        <p><span class="title-s">Email 1 : </span></p>
+                        <p><span>dzakytaqillah@gmail.com</span></p>
+                        <p><span>dzakytaqillah@student.telkomuniversity.ac.id</span></p>
                       </div>
                     </div>
                   </div>
@@ -123,7 +110,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      I am a student majoring in Information Technology at Telkom University Jakarta. I am currently a sophomore student.
+                      I am a student majoring in Information Technology at Telkom University Jakarta. I am currently a third year student.
                     </p>
                     <p class="lead">
                       I am a person who has a high curiosity, especially with things related to technological developments. I have good abilities in logic and reasoning.
@@ -164,9 +151,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Number System Converter Program</h2>
+                    <h2 class="w-title">C++ Digital Numeric Converter Program</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">C++</span> / <span class="w-date">30 Jan. 2023</span>
+                      <span class="w-ctegory">C++</span> / <span class="w-date">Aug 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -180,7 +167,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/off.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/MahaResep.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/off.jpg" alt="" class="img-fluid">
                 </div>
@@ -188,33 +175,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Personal Website</h2>
+                    <h2 class="w-title">Food Recipe Website</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">HTML-CSS</span> / <span class="w-date">17 Dec. 2022</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-arrow-right-circle"></span></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="x" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <div class="work-img">
-                  <img src="#" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">#</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">#</span> / <span class="w-date">XX XXX. 20XX</span>
+                      <span class="w-ctegory">Web</span> / <span class="w-date">Dec. 2024</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
