--- a/index.html
+++ b/index.html
@@ -45,14 +45,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto " href="#work">Work</a></li>
-          <li class="dropdown"><a href="#"><span>Social Media</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="http://instagram.com/mdzakytaqillah">Instagram</a></li>
-              <li><a href="https://www.youtube.com/@dzakytaqillah6724">YouTube</a></li>
-              <li><a href="https://www.tiktok.com/@mdzakytaqillah">TikTok</a></li>
-              <li><a href="https://www.linkedin.com/in/dzakytaqillah">LinkedIn</a></li>
-            </ul>
-          </li>
+          <li><a class="nav-link scrollto " href="https://github.com/mdzakytaqillah">GitHub</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -95,9 +88,9 @@
                       <div class="about-info">
                         <p><span class="title-s">Name : </span> <span>Muhammad Dzaky Taqillah</span></p>
                         <p><span class="title-s">Status : </span> <span>College Student</span></p>
-                        <p><span class="title-s">Email 1 : </span></p>
-                        <p><span>dzakytaqillah@gmail.com</span></p>
-                        <p><span>dzakytaqillah@student.telkomuniversity.ac.id</span></p>
+                        <p><span class="title-s">Email : </span></p>
+                        <p><span style="font-size:12pt;">dzakytaqillah@gmail.com</span></p>
+                        <p><span style="font-size:12pt;">dzakytaqillah@student.telkomuniversity.ac.id</span></p>
                       </div>
                     </div>
                   </div>
@@ -145,7 +138,7 @@
             <div class="work-box">
               <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid" style="height= 600px; object-fit: contain;">
                 </div>
               </a>
               <div class="work-content">
@@ -169,7 +162,7 @@
             <div class="work-box">
               <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid" style="height= 600px; object-fit: contain;">
                 </div>
               </a>
               <div class="work-content">
