--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                         <p><span class="title-s">Name : </span> <span>Muhammad Dzaky Taqillah</span></p>
                         <p><span class="title-s">Status : </span> <span>College Student</span></p>
                         <p><span class="title-s">Email : </span></p>
-                        <p><span style="font-size:12pt;">dzakytaqillah@gmail.com</span></p>
-                        <p><span style="font-size:12pt;">dzakytaqillah@student.telkomuniversity.ac.id</span></p>
+                        <p><span style="font-size:12px;">dzakytaqillah@gmail.com</span></p>
+                        <p><span style="font-size:12px;">dzakytaqillah@student.telkomuniversity.ac.id</span></p>
                       </div>
                     </div>
                   </div>
@@ -138,7 +138,7 @@
             <div class="work-box">
               <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid" style="height= 600px; object-fit: contain;">
+                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid" style="height= 450px; object-fit: contain;">
                 </div>
               </a>
               <div class="work-content">
@@ -162,7 +162,7 @@
             <div class="work-box">
               <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid" style="height= 600px; object-fit: contain;">
+                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid" style="height= 450px; object-fit: contain;">
                 </div>
               </a>
               <div class="work-content">
