--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="work-box">
               <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid" style="height= 450px; object-fit: contain;">
+                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
               </a>
               <div class="work-content">
@@ -162,7 +162,7 @@
             <div class="work-box">
               <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid" style="height= 450px; object-fit: contain;">
+                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
               </a>
               <div class="work-content">
