--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto " href="#work">Work</a></li>
+          <li><a class="nav-link scrollto " href="mailto:dzakytaqillah@gmail.com">Email</a></li>
           <li><a class="nav-link scrollto " href="https://github.com/mdzakytaqillah">GitHub</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -88,9 +89,6 @@
                       <div class="about-info">
                         <p><span class="title-s">Name : </span> <span>Muhammad Dzaky Taqillah</span></p>
                         <p><span class="title-s">Status : </span> <span>College Student</span></p>
-                        <p><span class="title-s">Email : </span></p>
-                        <p><span style="font-size:12px;">dzakytaqillah@gmail.com</span></p>
-                        <p><span style="font-size:12px;">dzakytaqillah@student.telkomuniversity.ac.id</span></p>
                       </div>
                     </div>
                   </div>
