--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="#"> <span class="bi bi-arrow-right-circle"></span></a>
+                      <a href="https://github.com/mdzakytaqillah/Food-Recipe-Website-Concept"> <span class="bi bi-arrow-right-circle"></span></a>
                     </div>
                   </div>
                 </div>
