--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <div class="work-box">
               <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid" style="width: 100%; height: 100%; object-fit: cover;">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/ZAg3HIGQilc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
               </a>
               <div class="work-content">
@@ -225,3 +225,4 @@
 </body>
 
 </html>
+
