--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/ZAg3HIGQilc?si=Q_mPH2jjs_xXIdyq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <div class="work-img">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/ZAg3HIGQilc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
               </a>
               <div class="work-content">
@@ -225,4 +225,5 @@
 </body>
 
 </html>
+
 
