--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/ZAg3HIGQilc?si=Q_mPH2jjs_xXIdyq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/ZAg3HIGQilc" data-gallery="portfolioGallery" class="portfolio-lightbox" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <div class="work-img">
                   <img src="assets/img/work-2.jpg" alt="" class="img-fluid" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
@@ -225,5 +225,6 @@
 </body>
 
 </html>
+
 
 
